experiement_output/error_log/nondex-sybcheck-seleniumAutoTest.log
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task638/wd/NonDex-plugin-test/github.com/sybcheck/seleniumAutoTest/src/main/java/cn/ac/base/DriverBase.java:20: error: package org.testng.annotations does not exist
import org.testng.annotations.*;
^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task638/wd/NonDex-plugin-test/github.com/sybcheck/seleniumAutoTest/src/main/java/cn/ac/util/AssertRewrite.java:5: error: package org.testng does not exist
import org.testng.Assert;
                 ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task638/wd/NonDex-plugin-test/github.com/sybcheck/seleniumAutoTest/src/main/java/cn/ac/util/TestEventListener.java:4: error: package org.testng does not exist
import org.testng.ITestResult;
                 ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task638/wd/NonDex-plugin-test/github.com/sybcheck/seleniumAutoTest/src/main/java/cn/ac/util/TestEventListener.java:5: error: package org.testng does not exist
import org.testng.TestListenerAdapter;
                 ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task638/wd/NonDex-plugin-test/github.com/sybcheck/seleniumAutoTest/src/main/java/cn/ac/util/TestEventListener.java:7: error: cannot find symbol
public class TestEventListener extends TestListenerAdapter {
                                       ^
  symbol: class TestListenerAdapter
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task638/wd/NonDex-plugin-test/github.com/sybcheck/seleniumAutoTest/src/main/java/cn/ac/util/TestEventListener.java:9: error: cannot find symbol
	public void onTestFailure(ITestResult tr) {
	                          ^
  symbol:   class ITestResult
  location: class TestEventListener
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task638/wd/NonDex-plugin-test/github.com/sybcheck/seleniumAutoTest/src/main/java/cn/ac/base/DriverBase.java:109: error: cannot find symbol
    @BeforeSuite
     ^
  symbol:   class BeforeSuite
  location: class DriverBase
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task638/wd/NonDex-plugin-test/github.com/sybcheck/seleniumAutoTest/src/main/java/cn/ac/base/DriverBase.java:117: error: cannot find symbol
    @AfterSuite
     ^
  symbol:   class AfterSuite
  location: class DriverBase
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task638/wd/NonDex-plugin-test/github.com/sybcheck/seleniumAutoTest/src/main/java/cn/ac/base/DriverBase.java:138: error: cannot find symbol
    @BeforeTest
     ^
  symbol:   class BeforeTest
  location: class DriverBase
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task638/wd/NonDex-plugin-test/github.com/sybcheck/seleniumAutoTest/src/main/java/cn/ac/base/DriverBase.java:148: error: cannot find symbol
    @AfterTest
     ^
  symbol:   class AfterTest
  location: class DriverBase
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task638/wd/NonDex-plugin-test/github.com/sybcheck/seleniumAutoTest/src/main/java/cn/ac/base/DriverBase.java:156: error: cannot find symbol
    @BeforeClass
     ^
  symbol:   class BeforeClass
  location: class DriverBase
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task638/wd/NonDex-plugin-test/github.com/sybcheck/seleniumAutoTest/src/main/java/cn/ac/base/DriverBase.java:164: error: cannot find symbol
    @AfterClass
     ^
  symbol:   class AfterClass
  location: class DriverBase
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task638/wd/NonDex-plugin-test/github.com/sybcheck/seleniumAutoTest/src/main/java/cn/ac/base/DriverBase.java:172: error: cannot find symbol
    @BeforeMethod
     ^
  symbol:   class BeforeMethod
  location: class DriverBase
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task638/wd/NonDex-plugin-test/github.com/sybcheck/seleniumAutoTest/src/main/java/cn/ac/base/DriverBase.java:180: error: cannot find symbol
    @AfterMethod
     ^
  symbol:   class AfterMethod
  location: class DriverBase
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task638/wd/NonDex-plugin-test/github.com/sybcheck/seleniumAutoTest/src/main/java/cn/ac/util/AssertRewrite.java:18: error: cannot find symbol
			Assert.assertEquals(actual, expected);
			^
  symbol:   variable Assert
  location: class AssertRewrite
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task638/wd/NonDex-plugin-test/github.com/sybcheck/seleniumAutoTest/src/main/java/cn/ac/util/TestEventListener.java:8: error: method does not override or implement a method from a supertype
	@Override
	^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task638/wd/NonDex-plugin-test/github.com/sybcheck/seleniumAutoTest/src/main/java/cn/ac/util/TestEventListener.java:11: error: cannot find symbol
		super.onTestFailure(tr);
		^
  symbol:   variable super
  location: class TestEventListener
17 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 9s
